// 定义项目 API 的 proto 文件 可以同时描述 gRPC 和 HTTP API
// protobuf 文件参考:
//  - https://developers.google.com/protocol-buffers/
syntax = "proto3";
// @RippleRpc
// @NacosGroup DEFAULT_GROUP
// @NacosCluster playerserver
package proto;

service Player {
  // 获取用户信息
  rpc GetPlayerInfo (GetPlayerInfoReq) returns (GetPlayerInfoResponse) {}
}


message GetPlayerInfoReq {
  // 用户id
  int64 player_id = 1;
}

message GetPlayerInfoResponse {
  int64 id = 1;
  string open_id = 2;
  string nickname = 3;
  string  union_id = 4;
  int32 state = 5;
  string avatar = 6;    //头像

}
